deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-violin-deployment
  namespace: development
  labels:
    app: go-violin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-violin
  template:
    metadata:
      labels:
        app: go-violin
    spec:
      containers:
      - name: go-violin-container
        image: ahmedelmelegy3570/goviolin-multistage
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 5000
