service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: development
spec:
  selector:
    app: go-violin
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
