ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: go-violin
spec:
  rules:
  - host: go-violin
    http:
      paths:
      - backend:
          service:
            name: go-violin-service
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
